--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,12 @@
         }
     ],
     "license": "MIT",
-    "require": {},
+    "require": {
+        "wp-cli/php-cli-tools": "^0.11.12"
+    },
+    "autoload": {
+        "files": ["src/Cli.php"]
+    },
     "bin": [
         "bin/brain-games"
     ]
