--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -3,9 +3,16 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
-    uses: actions/checkout@v2
-    uses: shivammathur/setup-php@v2
-    with:
-          php-version: '7.4'
-    run: make install
-    run: make lint
+    steps:
+      uses: actions/checkout@v2
+      
+      name: Setup PHP
+      uses: shivammathur/setup-php@v2
+      with:
+            php-version: '7.4'
+      
+      name: Install
+      run: make install
+
+      name: Run Linter
+      run: make lint
