--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,18 +1,18 @@
 name: PHP CI
-on: [push]
+on: push
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      uses: actions/checkout@v2
-      
-      name: Setup PHP
-      uses: shivammathur/setup-php@v2
-      with:
-            php-version: '7.4'
-      
-      name: Install
-      run: make install
+      - uses: actions/checkout@v2
 
-      name: Run Linter
-      run: make lint
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '7.4'
+      
+      - name: Install
+        run: make install
+
+      - name: Run Linter
+        run: make lint
