--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,11 @@
         "wp-cli/php-cli-tools": "^0.11.12"
     },
     "autoload": {
-        "files": ["src/Cli.php"]
+        "files": ["src/Cli.php", "src/BrainEven.php"]
     },
     "bin": [
-        "bin/brain-games"
+        "bin/brain-games",
+        "bin/brain-even"
     ],
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.6"
