--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "wp-cli/php-cli-tools": "^0.11.12"
     },
     "autoload": {
-        "files": ["src/Cli.php", "src/BrainEven.php"]
+        "files": ["src/Cli.php", "src/Engine.php", "src/Games/BrainEven.php", "src/Games/BrainCalc.php"]
     },
     "bin": [
         "bin/brain-games",
