--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,13 @@
         "wp-cli/php-cli-tools": "^0.11.12"
     },
     "autoload": {
-        "files": ["src/Cli.php", "src/Engine.php", "src/Games/BrainEven.php", "src/Games/BrainCalc.php"]
+        "files": ["src/Cli.php", "src/Engine.php", "src/Games/BrainEven.php", "src/Games/BrainCalc.php", "src/Games/BrainGDC.php"]
     },
     "bin": [
         "bin/brain-games",
-        "bin/brain-even"
+        "bin/brain-even",
+        "bin/brain-calc",
+        "bin/brain-gdc"
     ],
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.6"
