--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,23 @@
         "wp-cli/php-cli-tools": "^0.11.12"
     },
     "autoload": {
-        "files": ["src/Cli.php", "src/Engine.php", "src/Games/BrainEven.php", "src/Games/BrainCalc.php", "src/Games/BrainGDC.php", "src/Games/BrainProgression.php"]
+        "files": [
+            "src/Cli.php", 
+            "src/Engine.php", 
+            "src/Games/BrainEven.php", 
+            "src/Games/BrainCalc.php", 
+            "src/Games/BrainGDC.php", 
+            "src/Games/BrainProgression.php",
+            "src/Games/BrainPrime.php"
+        ]
     },
     "bin": [
         "bin/brain-games",
         "bin/brain-even",
         "bin/brain-calc",
         "bin/brain-gdc",
-        "bin/brain-progression"
+        "bin/brain-progression",
+        "bin/brain-prime"
     ],
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.6"
