fixed gcd filename

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
             "src/Engine.php", 
             "src/Games/BrainEven.php", 
             "src/Games/BrainCalc.php", 
-            "src/Games/BrainGDC.php", 
+            "src/Games/BrainGCD.php", 
             "src/Games/BrainProgression.php",
             "src/Games/BrainPrime.php"
         ]
@@ -26,7 +26,7 @@
         "bin/brain-games",
         "bin/brain-even",
         "bin/brain-calc",
-        "bin/brain-gdc",
+        "bin/brain-gcd",
         "bin/brain-progression",
         "bin/brain-prime"
     ],
